--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   </head>
   <body>
     <main id="main">
-      <form onsubmit="getRepositories(); return false">
+      <form onsubmit="searchRepos(); return false">
       <input type="text" id="searchTerms">
-      <input type="submit" value="Get Repositories">
+      <input type="submit" value="Show">
     </form>
       <div id="errors"></div>
     </main>
