--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <main id="main">
-      <form onsubmit="searchRepos(); return false">
+      <form onsubmit="searchRepositories(); return false">
       <input type="text" id="searchTerms">
       <input type="submit" value="Show">
     </form>
