--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <form onsubmit="searchRepositories(); return false">
       <input type="text" id="searchTerms">
       <input type="submit" value="Show">
+      <a href="#" id="search"></a>
     </form>
       <div id="errors"></div>
     </main>
